Fixed text alignment in some places

--- a/components/blogContainer.module.css
+++ b/components/blogContainer.module.css
@@ -5,7 +5,6 @@
   box-shadow: 0px 10px 10px rgba(34,34,34,0.2);
   background-color: #fff;
   padding: 48px;
-  text-align: justify;
 }
 
 @media all and (orientation: portrait) {
