--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -26,7 +26,6 @@
 
 .about {
   line-height: normal;
-  text-align: justify;
   margin-bottom: 18px;
 }
 
